// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledDateInput renders correctly for default theme 1`] = `
.c0 .c1 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 135px;
}

<div
  className="c0"
/>
`;

exports[`StyledDateInput renders correctly for the "classic" theme 1`] = `
.c0 .c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 135px;
}

.c0 .c3 {
  width: 120px;
}

.c0 .c2 {
  border-left: 1px solid #bfccd2;
  box-sizing: border-box;
  width: 31px;
}

.c0:hover .c1 {
  color: #FFFFFF;
}

<div
  className="c0"
/>
`;
